Spacing fixes and tightening up for Wide

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -263,7 +263,9 @@ h1.title {
 h2.quote {
    text-transform: none;
    font-size: 24px;
-line-height: 28px;
+   line-height: 28px;
+   max-width:90%;
+   margin: 12px auto 15px auto;
 }
 
 .light {
