--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -470,7 +470,7 @@
     margin-top: -20px;
     z-index: 999;
     margin-left: 0 !important;
-    width: 40%;
+    width: 38%;
   }
   .homepage-block-one {
     margin-right: 0px;
@@ -479,12 +479,12 @@
   }
   .homepage-block-two {
     float: right !important;
-    right: 4%;
+    right: 4.5%;
   }
   .homepage-blocks {
     border-top: 1px solid #f2f2f2;
-    margin-left: 40px !important;
-    width: 100%;
+    margin-left: 20px !important;
+    width: 1020px;
   }
   .homepage-blocks h1,
   .homepage-blocks h2 {
@@ -498,18 +498,21 @@
     font-weight: 300;
     line-height: 23px;
     font-size: 16px;
-    margin-top: 10px;
+    margin: 10px 0 12px 0;
   }
   .homepage-blocks .span2 {
-    width: 9%;
+    width: 11.5%;
   }
   #featured-story-two .spancontent {
     float: right;
   }
   #partners {
     clear: both;
-    margin: 80px 0;
+    margin: 57px 0;
     float: none;
+  }
+  #partners h2 {
+    margin-bottom: 15px;
   }
   #partners a {
     background: url(../img/icon-techlogos.png) no-repeat;
@@ -518,6 +521,10 @@
     height: 74px;
     text-indent: -9999px;
     display: inline-block;
+  }
+  h2.quote {
+    margin-bottom: 12px;
+    line-height: 28px;
   }
   .pc {
     background-position: -170px 0 !important;
@@ -553,6 +560,36 @@
     margin-top: 10px;
     letter-spacing: 1px;
   }
+  #partners a.button-two {
+    margin-top: 8px;
+  }
+  #featured-story-one {
+    background-position: 93% 24%;
+    margin-bottom: 33px;
+  }
+  #featured-story-one .spancontent {
+    padding: 48px 0 0 115px;
+    max-width: 390px;
+  }
+  #featured-story-one p,
+  #featured-story-two p {
+    margin-bottom: 12px;
+  }
+  .case-study-body {
+    margin: 6px 0 0 -30px;
+  }
+  .case-study-body h2 {
+    margin-bottom: 16px;
+  }
+  .case-study p {
+    margin-bottom: 12px;
+  }
+  #featured-story-two {
+    background-position: 39% 0%;
+  }
+  #featured-story-two .spancontent {
+    margin-right: -50px;
+  }
   .nav-collapse.collapse {
     margin-left: 40px;
   }
@@ -561,7 +598,6 @@
     margin-bottom: 0;
     margin-bottom: 60px;
     padding: 20px 100px 60px;
-    background: #333;
   }
   .slides,
   .slides img,
@@ -591,9 +627,12 @@
   }
   .home-news,
   .home-press {
-    width: 420px;
-    padding: 50px 0 0 46px;
-    margin: -50px 20px 0 19px;
+    width: 460px;
+    padding: 50px 0 0 43px;
+    margin: -50px 22px 0 19px;
+  }
+  .floathr {
+    width: 82%;
   }
   .home.page .row {
     margin-left: -20px;
@@ -820,7 +859,7 @@
     float: right;
     position: relative;
     top: -30px;
-    right: 0;
+    right: 33px;
   }
   a.get-started:hover,
   a.get-started:focus {
